--- a/blank.html
+++ b/blank.html
@@ -42,7 +42,7 @@
 
             </div>
             <div class="right-div">
-<strong>Support : </strong>  info@yourdomain.com
+<strong>پشتیبانی : </strong>  amin.balavar@yahoo.com
             </div>
           
         </div>
@@ -282,7 +282,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <hr />
                 <div style="text-align:center;padding:5px;">
-                    &copy;2014 yourdomain.com | <a href="http://www.binarytheme.com/" style="color:#fff;" target="_blank" >Designed By: Binarytheme.com</a>
+                    &copy;2014 yourdomain.com | <a href="#" style="color:#fff;" target="_blank" >Designed By: webcando</a>
                 </div>
             </div>
     </div>
